# cbigcache

./: CMakeLists.txt  cbigcache.go  cbigcache_test.go  config.go  const.go  error.go  install.sh  readme.md  types.go
include/: bigcache.h  const.h  debug.h  export.h  hash.h  helpers.h  json.h  shard.h  shard_entry.h  shard_page.h  ts_counter.h  types.h
src/: app.cpp  bigcache.cpp  debug.cpp  export.cpp  hash.cpp  helpers.cpp  json.cpp  shard.cpp  ts_counter.cpp
tests/: CMakeLists.txt  test_bigcache.cpp  test_json.cpp
